[package]
name = "idl-contract-extension"
version = "0.1.0"
authors = ["Tony Riemer <driemworks@idealabs.network>"]
edition = "2021"

[dependencies]
ink = { version = "5.0.0", default-features = false }
ink_env = { version = "5", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "ink_env/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
e2e-tests = []
