[package]
name = "timelock-auction"
version = "0.1.0"
authors = ["Tony Riemer <driemworks@idealabs.network>"]
edition = "2021"

[dependencies]
ink = { version = "4.2.0", default-features = false }
ink_env = { version = "4", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }
sha2 = { version = "0.10.2", default-features = false }

[dev-dependencies]
ink_e2e = "4.2.0"
rand_chacha = { version = "0.3.1", default-features = false }
crypto = { git = "https://github.com/ideal-lab5/etf-sdk", branch = "m3", default-features = false }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "ink_env/std",
    "scale/std",
    "scale-info/std",
    "sha2/std",
]
ink-as-dependency = []
e2e-tests = []
