[package]
name = "timelock-commit-reveal"
version = "0.1.0"
authors = ["Tony Riemer <driemworks@idealabs.network>"]
edition = "2021"

[dependencies]
ink = { version = "4.2.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

#crypto = { git = "https://github.com/ideal-lab5/etf-sdk", branch = "m3", default-features = false }
tlock = { package = "crypto", path = "../../etf-sdk/crypto" }

[dev-dependencies]
ink_e2e = "4.2.0"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
e2e-tests = []
