[package]
name = "tlock_proxy"
version = "0.1.0"
authors = ["[Carlos Montoya] <carlos@idealabs.network>"]
edition = "2021"

[dependencies]
ink = { version = "4.2.0", default-features = false }
ink_env = { version = "4", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }
# local dependencies
sbsp_auction = { path = "../sbsp_auction", default-features = false, features = ["ink-as-dependency"] }
erc721 = { path = "../erc721", default-features = false, features = ["ink-as-dependency"] }

[dev-dependencies]
ink_e2e = "4.2.0"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "ink_env/std",
    "scale/std",
    "scale-info/std",
    "sbsp_auction/std",
    "erc721/std",
]
ink-as-dependency = []
e2e-tests = []
