[package]
name = "world-registry"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { version = "4.2.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }
# etf-contract-utils = { git = "https://github.com/ideal-lab5/contracts.git", default-features = false, features = ["ink-as-dependency"] }
etf-contract-utils = { path = "../../src/", default-features = false, features = ["ink-as-dependency"] }
# noise = { version = "0.8.2", features = ["images"], default-features = false}

[dev-dependencies]
ink_e2e = "4.2.0"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "etf-contract-utils/std",
    # "noise/std",
]
ink-as-dependency = []
e2e-tests = []
