[package]
name = "resource-clock"
version = "0.1.0"
authors = ["Tony Riemer <driemworks@idealabs.network>"]
edition = "2021"

[dependencies]
ink = { version = "4.2.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }
sha3 = { version = "0.10.8", default-features = false }
# etf-contract-utils = { version = "0.1.0", git = "https://github.com/ideal-lab5/contracts.git", default-features = false, features = ["ink-as-dependency"] }
etf-contract-utils = { path = "../../../../common", default-features = false, features = ["ink-as-dependency"] }

[dev-dependencies]
ink_e2e = "4.2.0"
ink_env = { version = "4", default-features = false }
rand_chacha = { version = "0.3.1", default-features = false }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "sha3/std",
    "etf-contract-utils/std",
]
ink-as-dependency = []
e2e-tests = []
